Closed Bug 1106551 Opened 10 years ago Closed 10 years ago

Fix build on OpenBSD after bug 918140

Categories

(Core Graveyard :: File Handling, defect)

x86_64
OpenBSD
defect
Not set
normal

Tracking

(firefox35 unaffected, firefox36 fixed, firefox37 fixed)

RESOLVED FIXED
mozilla37
Tracking Status
firefox35 --- unaffected
firefox36 --- fixed
firefox37 --- fixed

People

(Reporter: gaston, Assigned: gaston)

References

Details

(Keywords: regression)

Attachments

(1 file)

Since bug 918140 landed in https://hg.mozilla.org/mozilla-central/rev/4d55c412cacd build fails on OpenBSD:

 1:34.00 In file included from /home/othersrc/mozilla-central/xpcom/io/nsLocalFileUnix.cpp:14:
 1:34.00 In file included from ../../dist/system_wrappers/sys/mount.h:3:
 1:34.00 In file included from /usr/include/sys/mount.h:40:
 1:34.00 /usr/include/sys/ucred.h:53:18: error: use of undeclared identifier 'NGROUPS'
 1:34.06         gid_t   cr_groups[NGROUPS];     /* groups */
 1:34.06                           ^
 1:34.06 /usr/include/sys/ucred.h:65:18: error: use of undeclared identifier 'NGROUPS'
 1:34.06         gid_t   cr_groups[NGROUPS];     /* groups */

This is because sys/mount.h is included to get the BLOCK_SIZE #define, and on OpenBSD you cant include sys/mount.h without including sys/param.h before to get the definition for NGROUPS.

Since BLOCK_SIZE seem to be specific to linux quotas (as USE_LINUX_QUOTACTL is set only if sys/quota.h *and* linux/quota.h are found), i'd suggest moving sys/mount.h inclusion within the same ifdef.
Attachment #8530858 - Flags: review?(benjamin)
Benjamin, straighforward review ping ? :)
Flags: needinfo?(benjamin)
Comment on attachment 8530858 [details] [diff] [review]
fix-918140-regression

whoever reviews it first gets a cookie :)
Attachment #8530858 - Flags: review?(nfroyd)
Comment on attachment 8530858 [details] [diff] [review]
fix-918140-regression

Review of attachment 8530858 [details] [diff] [review]:
-----------------------------------------------------------------

Cookies are a tasty treat.
Attachment #8530858 - Flags: review?(nfroyd)
Attachment #8530858 - Flags: review?(benjamin)
Attachment #8530858 - Flags: review+
Comment on attachment 8530858 [details] [diff] [review]
fix-918140-regression

Approval Request Comment
[Feature/regressing bug #]:918140 
[User impact if declined]: FTBFS on OpenBSD
[Describe test coverage new/current, TBPL]: Fixes build on OpenBSD, NPOTB other wise (codepath affects only linux and the change doesnt modify it)
Flags: needinfo?(benjamin)
Attachment #8530858 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/751970b5e4da
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Attachment #8530858 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: