Bug 1106551: Include sys/mount.h only in the linux quota case r=froydnj

Fixes build on OpenBSD where you cant include sys/mount.h alone, you
also need sys/param.h